alignment fix, 2

--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ body {
   width: 100%;
   grid-template-columns: 35% 32.5% 32.5%;
   flex-direction: row;
-  padding-left:16px;
+  padding-left:8px;
   padding-top:12px;
  /* background-color:#f2f2f2;
   -webkit-box-shadow: 0px -1px 10px 11px #f2f2f2;
@@ -204,7 +204,7 @@ a{
   position:relative;
   margin:0;
   padding:0;
-  padding-left:10px;
+  padding-left:0px;
   width:100%;
   top:70px;
 }
